--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI='mongodb+srv://test:aqWW9h8C6XnEYE4h@cluster0.lkhf4ct.mongodb.net/?retryWrites=true&w=majority'
+MONGO_URI='mongodb+srv://test:aqWW9h8C6XnEYE4h@cluster0.lkhf4ct.mongodb.net/file-sharing?retryWrites=true&w=majority
+'
 JWT_SECRET='rushikesh'
